@@ -26,6 +26,7 @@
 
 #import <Foundation/Foundation.h>
 #import <AppKit/AppKit.h>
+#import <Tree.h>
 
 #define TYPE_ANSI_0_COLOR				0
 #define TYPE_ANSI_1_COLOR				1
@@ -101,6 +102,9 @@
 - (void) setWindowAntiAlias: (BOOL) antiAlias forProfile: (NSString *) profileName;
 - (BOOL) windowBlurForProfile: (NSString *) profileName;
 - (void) setWindowBlur: (BOOL) blur forProfile: (NSString *) profileName;
+
+- (void) updateBookmarkNode: (TreeNode *)node forProfile: (NSString*) oldProfile with:(NSString*)newProfile;
+- (void) updateBookmarkProfile: (NSString*) oldProfile with:(NSString*)newProfile;
 
 @end
 
